@@ -14,6 +14,7 @@
     images are not used.
 10. In sync and sleep dialogs don't respond to both touch and click events,
     only the first of type.
+11. Fix playing a random mix with all genres selected.
 
 5.4.1
 -----
